Fix shop link position on mobile

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -37,9 +37,40 @@ html {
   grid-row: 1;
 }
 
+.shop-link {
+  font-family: 'Ropa Sans';
+  font-size: clamp(2rem, min(8vh, 8vw), 8rem);
+  font-weight: bold;
+  text-decoration: inherit;
+  color: white;
+  grid-row: 1;
+  grid-column: 1;
+  z-index: 1;
+  justify-self: end;
+  align-self: end;
+  margin-bottom: clamp(5rem, 10vh, 15rem);
+  margin-right: clamp(5rem, 10vh, 15rem);
+}
+
 @media (max-width: 700px) {
   .hero-img {
     height: 100vh;
+  }
+
+  .main-img-link-grid {
+    display: grid;
+    overflow: hidden;
+    width: max-content;
+    height: max-content;
+    max-width: 100vw;
+  }
+
+  .shop-link {
+    justify-self: auto;
+    align-self: auto;
+    position: absolute;
+    bottom: 0;
+    right: 0;
   }
 }
 
@@ -59,21 +90,6 @@ html {
     width: 100%;
     justify-content: center;
   }
-}
-
-.shop-link {
-  font-family: 'Ropa Sans';
-  font-size: clamp(2rem, min(8vh, 8vw), 8rem);
-  font-weight: bold;
-  text-decoration: inherit;
-  color: white;
-  grid-row: 1;
-  grid-column: 1;
-  z-index: 1;
-  justify-self: end;
-  align-self: end;
-  margin-bottom: clamp(5rem, 10vh, 15rem);
-  margin-right: clamp(5rem, 10vh, 15rem);
 }
 
 .shop-category {
